--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Aydın Yazılımcı Ağı</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|IBM+Plex+Sans:600" rel="stylesheet">
-    <link rel="stylesheet" href="dist/css/style.css">
+    <link rel="stylesheet" href="/dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
 <body class="is-boxed has-animations">
@@ -17,8 +17,8 @@
                     <div class="brand header-brand">
                         <h1 class="m-0">
                             <a href="#">
-								<img class="header-logo-image asset-light" src="dist/images/logo-light.svg" alt="Logo">
-								<img class="header-logo-image asset-dark" src="dist/images/logo-dark.svg" alt="Logo">
+								<img class="header-logo-image asset-light" src="/dist/images/logo-light.svg" alt="Logo">
+								<img class="header-logo-image asset-dark" src="/dist/images/logo-dark.svg" alt="Logo">
                             </a>
                         </h1>
                     </div>
@@ -42,16 +42,16 @@
 						</div>
 						<div class="hero-media">
 							<div class="header-illustration">
-								<img class="header-illustration-image asset-light" src="dist/images/header-illustration-light.svg" alt="Header illustration">
-								<img class="header-illustration-image asset-dark" src="dist/images/header-illustration-dark.svg" alt="Header illustration">
+								<img class="header-illustration-image asset-light" src="/dist/images/header-illustration-light.svg" alt="Header illustration">
+								<img class="header-illustration-image asset-dark" src="/dist/images/header-illustration-dark.svg" alt="Header illustration">
 							</div>
 							<div class="hero-media-illustration">
-								<img class="hero-media-illustration-image asset-light" src="dist/images/hero-media-illustration-light.svg" alt="Hero media illustration">
-								<img class="hero-media-illustration-image asset-dark" src="dist/images/hero-media-illustration-dark.svg" alt="Hero media illustration">
+								<img class="hero-media-illustration-image asset-light" src="/dist/images/hero-media-illustration-light.svg" alt="Hero media illustration">
+								<img class="hero-media-illustration-image asset-dark" src="/dist/images/hero-media-illustration-dark.svg" alt="Hero media illustration">
 							</div>
 							<div class="hero-media-container">
-								<img class="hero-media-image asset-light" src="dist/images/logo-afis.png" alt="Hero media">
-								<img class="hero-media-image asset-dark" src="dist/images/hero-media-dark.svg" alt="Hero media">
+								<img class="hero-media-image asset-light" src="/dist/images/logo-afis.png" alt="Hero media">
+								<img class="hero-media-image asset-dark" src="/dist/images/hero-media-dark.svg" alt="Hero media">
 							</div>
 						</div>
                     </div>
@@ -65,12 +65,12 @@
 							<div class="container-sm">
 								<h2 class="section-title mt-0">Nedir?</h2>
 								<div class="features-image">
-									<img class="features-illustration asset-dark" src="dist/images/features-illustration-dark.svg" alt="Feature illustration">
-									<img class="features-box asset-dark" src="dist/images/features-box-dark.svg" alt="Feature box">
-									<img class="features-illustration asset-dark" src="dist/images/features-illustration-top-dark.svg" alt="Feature illustration top">
-									<img class="features-illustration asset-light" src="dist/images/features-illustration-light.svg" alt="Feature illustration">
-									<img class="features-box asset-light" src="dist/images/afis.png" alt="Feature box">
-									<img class="features-illustration asset-light" src="dist/images/features-illustration-top-light.svg" alt="Feature illustration top">
+									<img class="features-illustration asset-dark" src="/dist/images/features-illustration-dark.svg" alt="Feature illustration">
+									<img class="features-box asset-dark" src="/dist/images/features-box-dark.svg" alt="Feature box">
+									<img class="features-illustration asset-dark" src="/dist/images/features-illustration-top-dark.svg" alt="Feature illustration top">
+									<img class="features-illustration asset-light" src="/dist/images/features-illustration-light.svg" alt="Feature illustration">
+									<img class="features-box asset-light" src="/dist/images/afis.png" alt="Feature box">
+									<img class="features-illustration asset-light" src="/dist/images/features-illustration-top-light.svg" alt="Feature illustration top">
 								</div>
 							</div>
                         </div>
@@ -78,8 +78,8 @@
                             <div class="feature is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-										<img class="asset-light" src="dist/images/feature-01-light.svg" alt="Feature 01">
-										<img class="asset-dark" src="dist/images/feature-01-dark.svg" alt="Feature 01">
+										<img class="asset-light" src="/dist/images/feature-01-light.svg" alt="Feature 01">
+										<img class="asset-dark" src="/dist/images/feature-01-dark.svg" alt="Feature 01">
                                     </div>
 									<div class="feature-content">
                                     	<h3 class="feature-title mt-0">Katıl</h3>
@@ -90,8 +90,8 @@
 							<div class="feature is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-										<img class="asset-light" src="dist/images/feature-02-light.svg" alt="Feature 02">
-										<img class="asset-dark" src="dist/images/feature-02-dark.svg" alt="Feature 02">
+										<img class="asset-light" src="/dist/images/feature-02-light.svg" alt="Feature 02">
+										<img class="asset-dark" src="/dist/images/feature-02-dark.svg" alt="Feature 02">
                                     </div>
 									<div class="feature-content">
                                     	<h3 class="feature-title mt-0">Takip Et</h3>
@@ -102,8 +102,8 @@
 							<div class="feature is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-										<img class="asset-light" src="dist/images/feature-03-light.svg" alt="Feature 03">
-										<img class="asset-dark" src="dist/images/feature-03-dark.svg" alt="Feature 03">
+										<img class="asset-light" src="/dist/images/feature-03-light.svg" alt="Feature 03">
+										<img class="asset-dark" src="/dist/images/feature-03-dark.svg" alt="Feature 03">
                                     </div>
 									<div class="feature-content">
                                     	<h3 class="feature-title mt-0">Öğren</h3>
@@ -136,8 +136,8 @@
                 <div class="site-footer-inner">
                     <div class="brand footer-brand">
                         <a href="#">
-							<img class="asset-light" src="dist/images/logo-light.svg" alt="Logo">
-							<img class="asset-dark" src="dist/images/logo-dark.svg" alt="Logo">
+							<img class="asset-light" src="/dist/images/logo-light.svg" alt="Logo">
+							<img class="asset-dark" src="/dist/images/logo-dark.svg" alt="Logo">
                         </a>
                     </div>
                     <ul class="footer-links list-reset">
@@ -167,6 +167,6 @@
         </footer>
     </div>
 
-    <script src="dist/js/main.min.js"></script>
+    <script src="/dist/js/main.min.js"></script>
 </body>
 </html>
